= Changelog

* Frontend
  ** Space logos can be edited in your settings.
* Database
  ** Add new column `picture_jpeg` to the `space` table.
* API
  ** Add `/space/picture` route to change a space picture.
    *** Use GET to download pictures.
    *** Use PUT to upload a picture replacing the old one.
    *** Use DELETE to delete the current picture.

== `0.11.1.0`

* API
  ** Add new field `users` to route `/space/list` to count users.
* Frontend
  ** Improve space overview on dashboard.
* Backend
  ** Add new configuration field `source-url`.
  ** Configuration field `directory-haddock` is now optional to improve the development workflow.

== `0.11.0.1`

* Frontend
  ** Select timezones out of drop-down list.

== `0.11.0.0`

* API
  ** Add new route `/notificationPreferences` to set notification preferences.
  ** During registration users can now decide whether they want to receive email notifications with the `email-notifications` field.
  ** The `/reservation/create` route now includes an optional boolean field `email-sent`.
* Backend
  ** Send emails on successful reservations.
* Database
  ** Add flag `email_notifications` to toggle emails being sent to a user.

== `0.10.0.3`

* Frontend
  ** Add Terms and Conditions and Privacy Policy to footer.
  ** Improve responsiveness of reservation date/time picker.

== `0.10.0.2`

* Frontend
  ** Fix updating user information after automatic login after registration.

== `0.10.0.1`

* Frontend
  ** Add Terms and Conditions.
  ** Add Privacy Policy.

== `0.10.0.0`

* Frontend
  ** Desks can viewed in a top-down "Room" view.
    *** Clicking a desk will bring up a window to create a reservation.
  ** Desks can be edited to change their location in the room.
  ** Improve visibility of reservations on timetable.
* API
  ** Desks now have an optional position as metadata affecting some routes.
    *** `/desk/create`
    *** `/desk/edit`
    *** `/desk/list`
    *** `/reservation/list`
* Database